# python-boilerplate-cli

./: README.md  setup.cfg
docs/: conf.py
sample/: __init__.py  __main__.py  biz.py  cli.py
tests/: test_sample.py
