[metadata]
name = python-boilerplate-cli
version = 0.1
author = Keath Milligan
author_email = somebody@somewhere.com
summary = A simple Python CLI boilerplate project
description_file = README.md
home_page = https://github.com/keathmilligan/python-boilerplate-cli
requires_dist = setuptools
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Archiving :: Packaging


[options]
packages = find:
install_requires =
    click
    colorama
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
entry_points =
    [console_scripts]
    sample_cli=sample:cli
[options.extras_require]
dev =
    pytest
    pylint
    Sphinx
    wheel

[options.packages.find]
exclude = tests

[build_sphinx]
project = Python CLI Boilerplate Project
release = 0.1.0
copyright = Copyright 2022 Keath Milligan
config_dir = docs

[aliases]
test=pytest
